<resources>
    <string name="app_name">Sew Kasir</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="pass">Password</string>
    <string name="user">Username/No Telp</string>
    <string name="lupa">Lupa Password</string>
    <string name="title_activity_muka">Main Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OfficialDevBjb</string>
    <string name="nav_header_subtitle">rwardana998@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>

    <string name="menu_home">Beranda</string>
    <string name="menu_gallery">Transaksi Baru</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
